<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
		android:id="@+id/titleId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/title"
		android:textSize="50dp"
		android:layout_gravity="center"/>
<TableLayout
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
   	android:layout_marginTop="30dp" 
   >
	<TableRow>
	<TextView
		android:id="@+id/usernameTextView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/username"
		android:textSize="20dp"
	/>
	<EditText
		android:id="@+id/usernameEditText"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:maxLength="40"
		android:hint="请输入用户名..."
	/>
	</TableRow>
	<TableRow 		
		android:layout_marginTop="30dp">
	<TextView
		android:id="@+id/pwdTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pwd"
		android:textSize="20dp"
	/>
	<EditText
		android:id="@+id/pwdEditText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="请输入密码..."
	/>
	</TableRow>
	
	<TableRow
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="100dp"
		android:layout_marginTop="30dp"
		android:layout_width="70dp"
		android:layout_height="wrap_content">
	<Button 
		android:id="@+id/loginBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
	/>
	<Button 
		android:id="@+id/cancelBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cancel"
	/>
	</TableRow>
	<TableRow>
	<Button 
		android:id="@+id/registerBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/register"
	/>
	</TableRow>
</TableLayout>
</LinearLayout>
